--- a/Tyuiu.MedvedevA.Sprint5.Task4.V10/Tyuiu.MedvedevA.Sprint5.Task4.V10.csproj
+++ b/Tyuiu.MedvedevA.Sprint5.Task4.V10/Tyuiu.MedvedevA.Sprint5.Task4.V10.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{52DFE81E-1860-4870-AE76-AE72A5C29F13}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tyuiu.MedvedevA.Sprint5.Task0.V12.Lib</RootNamespace>
-    <AssemblyName>Tyuiu.MedvedevA.Sprint5.Task0.V12.Lib</AssemblyName>
+    <ProjectGuid>{23A4E06E-E55E-4D0C-96F7-A1504F71946D}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>Tyuiu.MedvedevA.Sprint5.Task4.V10</RootNamespace>
+    <AssemblyName>Tyuiu.MedvedevA.Sprint5.Task4.V10</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -39,13 +41,19 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="tyuiu_cources_programming_interfaces">
-      <HintPath>..\tyuiu_cources_programming_interfaces.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataService.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.MedvedevA.Sprint5.Task4.V10.Lib\Tyuiu.MedvedevA.Sprint5.Task4.V10.Lib.csproj">
+      <Project>{4aa485a7-5795-47b3-a185-38346dec62d7}</Project>
+      <Name>Tyuiu.MedvedevA.Sprint5.Task4.V10.Lib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
