--- a/Tyuiu.MedvedevA.Sprint5.Task5.V4.Lib/Tyuiu.MedvedevA.Sprint5.Task5.V4.Lib.csproj
+++ b/Tyuiu.MedvedevA.Sprint5.Task5.V4.Lib/Tyuiu.MedvedevA.Sprint5.Task5.V4.Lib.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A1239A23-0162-40A5-9896-E1FEF7854350}</ProjectGuid>
+    <ProjectGuid>{90DF7933-37A2-44E6-B23C-F7E3E1B9A1DD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tyuiu.MedvedevA.Sprint5.Task1.V16.Lib</RootNamespace>
-    <AssemblyName>Tyuiu.MedvedevA.Sprint5.Task1.V16.Lib</AssemblyName>
+    <RootNamespace>Tyuiu.MedvedevA.Sprint5.Task5.V4.Lib</RootNamespace>
+    <AssemblyName>Tyuiu.MedvedevA.Sprint5.Task5.V4.Lib</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -39,8 +39,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="tyuiu.cources.programming.interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="tyuiu.cources.programming.interfaces">
       <HintPath>..\tyuiu.cources.programming.interfaces.dll</HintPath>
     </Reference>
   </ItemGroup>
